OPC-DA goes reactiveX